--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,11 @@
     "method-override": "^2.3.4",
     "mongoose": "^4.0.7",
     "morgan": "~1.6.1"
-
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "supertest": "^1.1.0"
+  }
 }
